--- a/Courseology/src/main/resources/application.properties
+++ b/Courseology/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/courses
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/courseology
 spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.show-sql=true
-server.port=8081
